# TempFlow

./: Cargo.toml  README.md
demo_rack/: app.py
src/: main.rs
src/db/scripts/: default_rack.sql  init_tables.sql  reqests.sql
src/entities/: point.rs  rack.rs  room.rs  sensor.rs  user.rs  vector.rs
src/managers/: collectionManager.rs
src/operators/: gradient.rs
src/utils/: colour.rs  stl.rs
