[package]
name = "TempFlow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = [] }
image = { version = "0.24.7", features = [] }